--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Monitoring Form</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <form action="insert_data.php" method="POST">
